# kfilter

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CODEBUDDY.md  Dockerfile  FACTOR_SELECTION_IMPLEMENTATION.md  README-Docker.md  README.md  deploy.sh  docker-compose.yml  extended_analysis_results.json  pnpm-lock.yaml  stock_data.db  test_analysis_results.json  test_extended_analysis.json  test_frontend_data.json  tmp_rovodev_create_pwa_icons.py  tmp_rovodev_test_support.py
backend/: api.py  config.json  config.py  conftest.py  dashboard_service.py  data_processor.py  extended_analysis.py  extended_analysis_results.json  main.py  market_data_processor.py  models.py  pyproject.toml  ranking.json  scheduler.py  services.py  stock_data.db  stock_data_manager.py  test_simple.py  test_workflow.py  utils.py  verify_concept_changes.py
backend/data_management/: analysis_task_runner.py  chart_data_generator.py  concept_service.py  dashboard_service.py  deepsearch.py  factor.py  llm_client.py  services.py  stock_data.db  stock_data_manager.py
backend/factors/: __init__.py  momentum.py  support.py
backend/market_data/: __init__.py  concept10jqka.py  data_fetcher.py  factor_calculator.py  kline_processor.py  ths_api.py
backend/scripts/: clean_ths_concepts.py  test_deepsearch.py
backend/static/: .gitignore  README.md  index.html  sw.js
backend/static/assets/: index-55b584e9.css  index-5afe41b6.js
backend/static/icons/: pwa-meta-tags.html
backend/tests/: test_deepsearch.py
backend/utils/: __init__.py  quotation.py
frontend/: README-PWA.md  index.html  (+3 more)
(+34 files in other folders)
