[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "my-backend"
version = "0.1.0"
dependencies = [
    "fastapi",
    "uvicorn",
    "pandas",
    "numpy",
    "sqlmodel",
    "requests",
    "requests-html",
    "lxml_html_clean",
    "python-dotenv",
    "openai",
    "apscheduler",
    # Optional: use AkShare if available for real market data
    # "akshare",
    "akshare>=1.17.44",
    "playwright>=1.40.0",
]
[tool.uv]
dev-dependencies = [
    "pytest",
    "black",
    "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["main.py"]

